// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button test 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-0:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-0:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
    >
      Hello 😀 😎 👍 💯
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Calendar Default 1`] = `
.emotion-34 {
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
  overflow: hidden;
  padding: 20px;
  position: relative;
}

.emotion-0 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  height: 48px;
  width: 48px;
  text-align: center;
  cursor: pointer;
  outline: none;
  background-color: #F7F7F9;
  border-radius: 3px;
  display: table;
  border-collapse: collapse;
  border: 1px solid #ffffff;
  border-left: 0;
  border-top: 0;
}

.emotion-0 time {
  font-family: inherit;
}

.emotion-0.react-calendar__tile--now {
  color: #6161FF;
}

.emotion-0:hover {
  background-color: #EDEDED;
}

.emotion-0.react-calendar__tile--active {
  background-color: #E8E8FF;
  color: #6161FF;
}

.emotion-0.react-calendar__tile--rangeStart {
  background-color: #6161FF;
  color: #ffffff !important;
}

.emotion-0.react-calendar__tile--rangeEnd {
  background-color: #6161FF;
  color: #ffffff !important;
}

.emotion-0.react-calendar__tile--singleSelect {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0.react-calendar__month-view__days__day--neighboringMonth {
  color: #9FA6B0;
}

.emotion-31 {
  width: 356px;
  margin: 10px;
  position: relative;
}

.emotion-31 .react-calendar__month-view__weekdays__weekday {
  color: #6B7785;
  line-spacing: 7px;
  font-size: 12px;
  text-align: center;
}

.emotion-31 .react-calendar__navigation__arrow {
  border: 1px solid #E0E0E0;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  outline: none;
  height: 40px;
  width: 40px;
}

.emotion-31 .react-calendar__navigation__arrow.react-calendar__navigation__prev-button {
  position: absolute;
  right: 47px;
}

.emotion-31 .react-calendar__navigation__label {
  font-weight: bold;
  color: #101721;
  font-size: 18px;
  text-align: left;
  border: 0;
  outline: none;
  cursor: pointer;
  padding-left: 5px;
}

.emotion-31 .react-calendar__month-view {
  margin-top: 30px;
}

.emotion-31 .react-calendar__month-view__weekdays {
  margin-bottom: 20px;
}

.emotion-31 .react-calendar__decade-view__years,
.emotion-31 .react-calendar__century-view,
.emotion-31 .react-calendar__year-view {
  margin-top: 15px;
}

.emotion-33 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-33.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-33.__pebble__button__disabled:focus {
  border: none;
}

.emotion-33.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-33.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-33.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-33.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-33.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-33.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-33.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-33.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-33.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-33.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-33:focus {
  border: none;
}

.emotion-33.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-33.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-33.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-33:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-33:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-33.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-32 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-32.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-32.__pebble__button__disabled:focus {
  border: none;
}

.emotion-32.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-32.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-32.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-32.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-32.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-32.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-32.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-32.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-32.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-32.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-32:focus {
  border: none;
}

.emotion-32.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-32.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-32.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-32:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-32:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-32.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-34"
    >
      <div
        className="react-calendar react-calendar--selectRange emotion-31"
        onBlur={[Function]}
        onMouseOut={[Function]}
      >
        <div
          className="react-calendar__navigation"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="react-calendar__navigation__arrow react-calendar__navigation__prev-button"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon-chevron-left"
              style={
                Object {
                  "fontSize": 16,
                }
              }
            />
          </button>
          <button
            className="react-calendar__navigation__label"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
            type="button"
          >
            July 2018
          </button>
          <button
            className="react-calendar__navigation__arrow react-calendar__navigation__next-button"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon-arrow-right"
              style={
                Object {
                  "fontSize": 16,
                }
              }
            />
          </button>
        </div>
        <div
          className="react-calendar__month-view "
        >
          <div
            style={
              Object {
                "alignItems": "flex-end",
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "flexGrow": 1,
                  "width": "100%",
                }
              }
            >
              <div
                className="react-calendar__month-view__weekdays"
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": undefined,
                    "flexWrap": "no-wrap",
                  }
                }
              >
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Mon
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Tue
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Wed
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Thu
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Fri
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Sat
                </div>
                <div
                  className="react-calendar__month-view__weekdays__weekday"
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                >
                  Sun
                </div>
              </div>
              <div
                className="react-calendar__month-view__days"
                style={
                  Object {
                    "display": "flex",
                    "flexDirection": undefined,
                    "flexWrap": "wrap",
                  }
                }
              >
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": "85.71428571428571%",
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-01T00:00:00.000"
                  >
                    1
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-02T00:00:00.000"
                  >
                    2
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-03T00:00:00.000"
                  >
                    3
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-04T00:00:00.000"
                  >
                    4
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-05T00:00:00.000"
                  >
                    5
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-06T00:00:00.000"
                  >
                    6
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-07T00:00:00.000"
                  >
                    7
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-08T00:00:00.000"
                  >
                    8
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-09T00:00:00.000"
                  >
                    9
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-10T00:00:00.000"
                  >
                    10
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-11T00:00:00.000"
                  >
                    11
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-12T00:00:00.000"
                  >
                    12
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-13T00:00:00.000"
                  >
                    13
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-14T00:00:00.000"
                  >
                    14
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-15T00:00:00.000"
                  >
                    15
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-16T00:00:00.000"
                  >
                    16
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-17T00:00:00.000"
                  >
                    17
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-18T00:00:00.000"
                  >
                    18
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-19T00:00:00.000"
                  >
                    19
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-20T00:00:00.000"
                  >
                    20
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-21T00:00:00.000"
                  >
                    21
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-22T00:00:00.000"
                  >
                    22
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-23T00:00:00.000"
                  >
                    23
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-24T00:00:00.000"
                  >
                    24
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-25T00:00:00.000"
                  >
                    25
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-26T00:00:00.000"
                  >
                    26
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-27T00:00:00.000"
                  >
                    27
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-28T00:00:00.000"
                  >
                    28
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-29T00:00:00.000"
                  >
                    29
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-30T00:00:00.000"
                  >
                    30
                  </time>
                </button>
                <button
                  className="react-calendar__tile react-calendar__month-view__days__day emotion-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "flexBasis": "14.285714285714286%",
                      "marginLeft": null,
                      "maxWidth": "14.285714285714286%",
                      "overflow": "hidden",
                    }
                  }
                  type="button"
                >
                  <time
                    dateTime="2018-07-31T00:00:00.000"
                  >
                    31
                  </time>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 20,
          }
        }
      >
        <button
          className="emotion-32"
          onClick={[Function]}
          style={
            Object {
              "width": undefined,
            }
          }
        >
          Clear
           
          <canvas
            height={0}
            onDragOver={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "borderRadius": "inherit",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
            width={0}
          />
        </button>
        <button
          className="emotion-33"
          onClick={[Function]}
          style={
            Object {
              "width": undefined,
            }
          }
        >
          Apply
           
          <canvas
            height={0}
            onDragOver={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "borderRadius": "inherit",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
            width={0}
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Controls simple 1`] = `
.emotion-1 {
  color: #101721;
  font-weight: normal;
  font-size: 14px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 10px 0;
}

.emotion-0 {
  font-size: 16px;
  margin-right: 10px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        onClick={[Function]}
      >
        <div
          className="emotion-1"
        >
          <i
            className="emotion-0 icon-checkbox-unselected"
            style={
              Object {
                "color": "#9FA6B0",
              }
            }
          />
          Ongoing
        </div>
      </div>
      <div
        onClick={[Function]}
      >
        <div
          className="emotion-1"
        >
          <i
            className="emotion-0 icon-checkbox-unselected"
            style={
              Object {
                "color": "#9FA6B0",
              }
            }
          />
          Done
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown simple 1`] = `
.emotion-3 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
}

.emotion-3:last-of-type {
  border: 0;
}

.emotion-3:hover {
  background-color: #F7F7F9;
}

.emotion-1 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-1.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-1.__pebble__button__disabled:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-1.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-1.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-1.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-1.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-1:focus {
  border: none;
}

.emotion-1.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-1.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-0 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 12px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-5 {
  min-width: 250px;
  box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
  background-color: #ffffff;
  border-radius: 3px;
  position: absolute;
  -webkit-transition: margin-top cubic-bezier(0.23,1,0.32,1) .4s,opacity linear .2s;
  transition: margin-top cubic-bezier(0.23,1,0.32,1) .4s,opacity linear .2s;
  margin-top: 10px;
  will-change: opacity,margin-top;
  z-index: 999;
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
  position: absolute;
  width: inherit;
  z-index: 9;
  max-height: 352px;
  min-width: 200px;
  overflow-y: scroll;
  padding: 20px 1px;
}

.emotion-2 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  background-color: #F7F7F9;
}

.emotion-2:last-of-type {
  border: 0;
}

.emotion-2:hover {
  background-color: #F7F7F9;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <button
        className="__pebble__button__dropdown __pebble__button__dropdown__open emotion-1"
        onClick={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Hello
         
        <i
          className="icon-arrow-down emotion-0"
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </button>
      <div
        className="emotion-5"
        style={
          Object {
            "padding": undefined,
          }
        }
      >
        <div
          className="emotion-4"
        >
          <div
            className="emotion-2"
            onClick={[Function]}
          >
            <canvas
              height={0}
              onDragOver={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "borderRadius": "inherit",
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
              width={0}
            />
            Lorem ipsum dolor sit amet
          </div>
          <div
            className="emotion-3"
            onClick={[Function]}
          >
            <canvas
              height={0}
              onDragOver={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "borderRadius": "inherit",
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
              width={0}
            />
            Lorem ipsum dolor sit amet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Date 1`] = `
.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
  height: 68px;
}

.emotion-3.__pebble__input__wrapper__textarea {
  height: 110px;
}

.emotion-1 {
  outline: 0;
  border: 0;
  border-bottom: 1px solid #EDEDED;
  padding: 24px 0 12px 0;
  height: 48px;
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1.__pebble__input__read__only {
  color: #6B7785;
}

.emotion-1.__pebble__input__disabled {
  cursor: inherit;
  pointer-events: none;
  color: #9FA6B0;
}

.emotion-1.__pebble__input__textarea {
  height: 88px;
  padding: 24px 0 52px 0;
  resize: none;
}

.emotion-1[type='date']::-webkit-inner-spin-button,
.emotion-1[type='date']::-webkit-calendar-picker-indicator {
  webkit-appearance: none;
  display: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1:-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::placeholder {
  color: #E0E0E0;
}

.emotion-2 {
  height: 2px;
  background-color: #6161FF;
  margin-top: -2px;
  position: relative;
  width: 0;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  z-index: 9;
}

.emotion-2.__pebble__input__highlight__state,
.emotion-2.__pebble__input__highlight__focused {
  width: 100%;
}

.emotion-0 {
  color: #9FA6B0;
  font-size: 14px;
  line-height: 12px;
  position: absolute;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  -webkit-transform: translate(0,24px);
  -ms-transform: translate(0,24px);
  transform: translate(0,24px);
  pointer-events: none;
}

.emotion-0.__pebble__input__label__focused {
  font-size: 12px;
  line-height: 10px;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  color: #6B7785;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        onClick={[Function]}
      >
        <div
          className="emotion-3"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="emotion-0 __pebble__input__label__focused"
          >
            Date
          </label>
          <input
            aria-label="Date"
            className="emotion-1"
            onChange={[Function]}
            readOnly={false}
            type="date"
            value="Invalid Date"
          />
          <div
            className="emotion-2"
            style={
              Object {
                "backgroundColor": "#6161FF",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Material 1`] = `
.emotion-1 {
  outline: 0;
  border: 0;
  border-bottom: 1px solid #EDEDED;
  padding: 24px 0 12px 0;
  height: 48px;
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1.__pebble__input__read__only {
  color: #6B7785;
}

.emotion-1.__pebble__input__disabled {
  cursor: inherit;
  pointer-events: none;
  color: #9FA6B0;
}

.emotion-1.__pebble__input__textarea {
  height: 88px;
  padding: 24px 0 52px 0;
  resize: none;
}

.emotion-1[type='date']::-webkit-inner-spin-button,
.emotion-1[type='date']::-webkit-calendar-picker-indicator {
  webkit-appearance: none;
  display: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1:-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::placeholder {
  color: #E0E0E0;
}

.emotion-2 {
  height: 2px;
  background-color: #6161FF;
  margin-top: -2px;
  position: relative;
  width: 0;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  z-index: 9;
}

.emotion-2.__pebble__input__highlight__state,
.emotion-2.__pebble__input__highlight__focused {
  width: 100%;
}

.emotion-0 {
  color: #9FA6B0;
  font-size: 14px;
  line-height: 12px;
  position: absolute;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  -webkit-transform: translate(0,24px);
  -ms-transform: translate(0,24px);
  transform: translate(0,24px);
  pointer-events: none;
}

.emotion-0.__pebble__input__label__focused {
  font-size: 12px;
  line-height: 10px;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  color: #6B7785;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
  height: 68px;
  width: 400px;
}

.emotion-3.__pebble__input__wrapper__textarea {
  height: 110px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-3"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="emotion-0"
      >
        Name
      </label>
      <input
        aria-label="Name"
        className="emotion-1"
        onChange={[Function]}
        readOnly={false}
        value=""
      />
      <div
        className="emotion-2"
        style={
          Object {
            "backgroundColor": "#6161FF",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal simple 1`] = `
.emotion-1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow-y: scroll;
  z-index: 99999;
}

.emotion-0 {
  height: 200px;
  width: 200px;
  background-color: #ffffff;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Options basic 1`] = `
.emotion-2 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
}

.emotion-2:last-of-type {
  border: 0;
}

.emotion-2:hover {
  background-color: #F7F7F9;
}

.emotion-0 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  background-color: #F7F7F9;
}

.emotion-0:last-of-type {
  border: 0;
}

.emotion-0:hover {
  background-color: #F7F7F9;
}

.emotion-7 {
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
  position: absolute;
  width: inherit;
  z-index: 9;
  max-height: 352px;
  min-width: 200px;
  overflow-y: scroll;
  padding: 20px 1px;
  width: 300px;
}

.emotion-1 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  background-color: #E8E8FF;
  color: #6161FF;
}

.emotion-1:last-of-type {
  border: 0;
}

.emotion-1:hover {
  background-color: #F7F7F9;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-0"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-1"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-2"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-2"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-2"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-2"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
      <div
        className="emotion-2"
        onClick={[Function]}
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
        Lorem ipsum dolor
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Default 1`] = `
.emotion-1 {
  border-radius: 3px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
}

.emotion-1.__pebble__search__small {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__search__large {
  background-color: #ffffff;
  height: 76px;
  padding: 0 25px;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-1.__pebble__search__large input {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
}

.emotion-1.__pebble__search__table {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
}

.emotion-1.__pebble__search__table i {
  color: #6B7785;
}

.emotion-0 {
  border-radius: 3px;
  outline: none;
  border: 0;
  height: inherit;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  background-color: transparent;
}

.emotion-0::-webkit-input-placeholder {
  color: #F7F7F9;
}

.emotion-0::-moz-placeholder {
  color: #F7F7F9;
}

.emotion-0:-ms-input-placeholder {
  color: #F7F7F9;
}

.emotion-0:-moz-placeholder {
  color: #F7F7F9;
}

.emotion-0::-webkit-input-placeholder {
  color: #F7F7F9;
}

.emotion-0::-moz-placeholder {
  color: #F7F7F9;
}

.emotion-0:-ms-input-placeholder {
  color: #F7F7F9;
}

.emotion-0::placeholder {
  color: #F7F7F9;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-1 __pebble__search__small"
    >
      <i
        className="icon-search"
        style={
          Object {
            "marginRight": 10,
          }
        }
      />
      <input
        aria-label="Search"
        className="emotion-0"
        onChange={[Function]}
        placeholder="Search"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Select default 1`] = `
.emotion-1 {
  outline: 0;
  border: 0;
  border-bottom: 1px solid #EDEDED;
  padding: 24px 0 12px 0;
  height: 48px;
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1.__pebble__input__read__only {
  color: #6B7785;
}

.emotion-1.__pebble__input__disabled {
  cursor: inherit;
  pointer-events: none;
  color: #9FA6B0;
}

.emotion-1.__pebble__input__textarea {
  height: 88px;
  padding: 24px 0 52px 0;
  resize: none;
}

.emotion-1[type='date']::-webkit-inner-spin-button,
.emotion-1[type='date']::-webkit-calendar-picker-indicator {
  webkit-appearance: none;
  display: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1:-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::placeholder {
  color: #E0E0E0;
}

.emotion-2 {
  height: 2px;
  background-color: #6161FF;
  margin-top: -2px;
  position: relative;
  width: 0;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  z-index: 9;
}

.emotion-2.__pebble__input__highlight__state,
.emotion-2.__pebble__input__highlight__focused {
  width: 100%;
}

.emotion-0 {
  color: #9FA6B0;
  font-size: 14px;
  line-height: 12px;
  position: absolute;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  -webkit-transform: translate(0,24px);
  -ms-transform: translate(0,24px);
  transform: translate(0,24px);
  pointer-events: none;
}

.emotion-0.__pebble__input__label__focused {
  font-size: 12px;
  line-height: 10px;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  color: #6B7785;
}

.emotion-6 {
  margin-bottom: 20px;
}

.emotion-5 {
  cursor: pointer;
  position: relative;
}

.emotion-4 {
  position: absolute;
  top: 25px;
  right: 7px;
  color: #9FA6B0;
  font-size: 12px;
}

.emotion-4.__pebble__select__open {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
  height: 68px;
  pointer-events: none;
}

.emotion-3.__pebble__input__wrapper__textarea {
  height: 110px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-6"
    >
      <div>
        <div
          className="emotion-5"
          onClick={[Function]}
        >
          <div
            className="emotion-3"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <label
              className="emotion-0 __pebble__input__label__focused"
            >
              hello
            </label>
            <input
              aria-label="hello"
              className="emotion-1"
              onChange={[Function]}
              readOnly={false}
              value="Lorem ipsum dolor"
            />
            <div
              className="emotion-2"
              style={
                Object {
                  "backgroundColor": "#6161FF",
                }
              }
            />
          </div>
          <i
            className="emotion-4 icon-arrow-down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideBar simple 1`] = `
.emotion-2 {
  background-color: rgba(16,23,33,0.3);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 99;
}

.emotion-0 {
  background-color: #ffffff;
  border-radius: 3px;
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  overflow: hidden;
  position: relative;
}

.emotion-0 i {
  font-size: 25px;
  color: #101721;
}

.emotion-3 {
  width: 400px;
  height: 400px;
  background-color: green;
}

.emotion-1 {
  margin-right: 420px;
  margin-top: 20px;
  float: right;
}

.emotion-4 {
  -webkit-transition: -webkit-transform 200ms cubic-bezier(.64,.09,.08,1);
  -webkit-transition: transform 200ms cubic-bezier(.64,.09,.08,1);
  transition: transform 200ms cubic-bezier(.64,.09,.08,1);
  background-color: #ffffff;
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  will-change: transform;
  z-index: 99;
  overflow-y: scroll;
  width: 400px;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-2"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          className="emotion-0"
          onClick={[Function]}
        >
          <i
            className="icon-close"
          />
          <canvas
            height={0}
            onDragOver={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "borderRadius": "inherit",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
            width={0}
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
      width={400}
    >
      <div
        className="emotion-3"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Slider simple 1`] = `
.emotion-1 {
  width: 400px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  margin-bottom: 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.__pebble__slider__large .emotion-0 {
  margin-bottom: 35px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      >
        <div
          style={
            Object {
              "color": "#6B7785",
              "fontSize": 14,
              "fontWeight": "normal",
            }
          }
        >
          Select Range
        </div>
        <div
          style={
            Object {
              "color": "#101721",
              "fontSize": 14,
              "fontWeight": "normal",
            }
          }
        >
          0-100
        </div>
      </div>
      <div
        className="rheostat rheostat-horizontal "
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="rheostat-background"
        />
        <button
          aria-disabled={false}
          aria-valuemax={90}
          aria-valuemin={0}
          aria-valuenow={10}
          className="rheostat-handle"
          data-handle-key={0}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "10%",
              "position": "absolute",
            }
          }
          tabIndex={0}
          type="button"
        />
        <button
          aria-disabled={false}
          aria-valuemax={100}
          aria-valuemin={10}
          aria-valuenow={90}
          className="rheostat-handle"
          data-handle-key={1}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "90%",
              "position": "absolute",
            }
          }
          tabIndex={0}
          type="button"
        />
        <div
          className="rheostat-progress"
          style={
            Object {
              "left": "10%",
              "width": "80%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Stepper Default 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-2 > div {
  font-size: 14px;
}

.emotion-4 {
  height: 20px;
  width: 20px;
  background-color: #9FA6B0;
  border-radius: 50%;
  border: 5px solid white;
  margin-top: 18px;
  position: relative;
  z-index: 9;
}

.emotion-16 {
  background-color: #ffffff;
  margin-top: -10px;
  border-radius: 3px;
  box-shadow: 0 4px 7px 0 #E0E0E0;
  padding: 60px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 50px;
}

.emotion-9 {
  height: 2px;
  bottom: 9px;
  position: absolute;
  -webkit-transition: width 100ms ease-out;
  transition: width 100ms ease-out;
  background-color: #6161FF;
}

.emotion-17 {
  position: relative;
  width: 800px;
}

.emotion-1 {
  height: 20px;
  width: 20px;
  background-color: #9FA6B0;
  border-radius: 50%;
  border: 5px solid white;
  margin-top: 18px;
  position: relative;
  z-index: 9;
  background-color: #6161FF;
}

.emotion-11 {
  display: none;
}

.emotion-0 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  color: #6161FF;
}

.emotion-3 {
  font-weight: normal;
  color: #101721;
  font-size: 14px;
}

.emotion-13 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  min-width: 140px;
  height: 50px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-13.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-13.__pebble__button__disabled:focus {
  border: none;
}

.emotion-13.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-13.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-13.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-13.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-13.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-13.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-13.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-13.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-13.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-13.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-13:focus {
  border: none;
}

.emotion-13.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-13.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-13:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-13:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-13.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-14 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 14px;
  min-width: 140px;
  height: 50px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-14.__pebble__button__disabled {
  cursor: inherit;
}

.emotion-14.__pebble__button__disabled:focus {
  border: none;
}

.emotion-14.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-14.__pebble__button__dropdown:not(.__pebble__button__dropdown):hover {
  background-color: #F7F7F9;
}

.emotion-14.__pebble__button__dropdown:not(.__pebble__button__dropdown):active {
  background-color: #E0E0E0;
}

.emotion-14.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-14.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-14.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-14.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-14.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-14.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-14.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-14:focus {
  border: none;
}

.emotion-14.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-14.__pebble__button_link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: inherit;
}

.emotion-14:not(.__pebble__button__dropdown):hover {
  background-color: #7070FF;
}

.emotion-14:not(.__pebble__button__dropdown):active {
  background-color: #5656ED;
}

.emotion-14.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-17"
    >
      <div
        className="emotion-10"
      >
        <div
          className="emotion-2"
          onClick={[Function]}
        >
          <div
            className="emotion-0"
          >
            Buyer Registration
          </div>
          <div
            className="emotion-1"
          />
        </div>
        <div
          className="emotion-2"
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            Source Registration
          </div>
          <div
            className="emotion-4"
          />
        </div>
        <div
          className="emotion-2"
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            Assignment
          </div>
          <div
            className="emotion-4"
          />
        </div>
        <div
          className="emotion-9"
          style={
            Object {
              "marginLeft": "16.666666666666668%",
              "width": "0%",
            }
          }
        />
      </div>
      <div
        className="emotion-16"
      >
        <div
          className=""
        >
          <div>
            Buyer Registration
          </div>
        </div>
        <div
          className="emotion-11"
        >
          <div>
            Source Registration
          </div>
        </div>
        <div
          className="emotion-11"
        >
          <div>
            Assignment
          </div>
        </div>
        <footer
          className="emotion-15"
        >
          <button
            className="emotion-13"
            onClick={[Function]}
            style={
              Object {
                "width": 100,
              }
            }
          >
            Cancel
             
            <canvas
              height={0}
              onDragOver={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "borderRadius": "inherit",
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
              width={0}
            />
          </button>
          <button
            className="emotion-14"
            onClick={[Function]}
            style={
              Object {
                "width": 100,
              }
            }
          >
            Next
             
            <canvas
              height={0}
              onDragOver={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={
                Object {
                  "borderRadius": "inherit",
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
              width={0}
            />
          </button>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag simple 1`] = `
.emotion-0 {
  font-weight: bold;
  color: #101721;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  border-radius: 3px;
  padding: 0 15px;
  height: 24px;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0.__pebble__tag__with__close {
  padding-right: 0;
}

.emotion-0 i {
  font-size: 13px;
  margin-left: 10px;
  height: inherit;
  padding: 7px;
  cursor: pointer;
  position: relative;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-0"
      style={
        Object {
          "backgroundColor": "#E8F6DD",
          "color": "#69C022",
          "display": "inline-flex",
        }
      }
    >
      Anarock Tag
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag with cross 1`] = `
.emotion-0 {
  font-weight: bold;
  color: #101721;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  border-radius: 3px;
  padding: 0 15px;
  height: 24px;
  text-transform: uppercase;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0.__pebble__tag__with__close {
  padding-right: 0;
}

.emotion-0 i {
  font-size: 13px;
  margin-left: 10px;
  height: inherit;
  padding: 7px;
  cursor: pointer;
  position: relative;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-0 __pebble__tag__with__close"
      style={
        Object {
          "backgroundColor": "#E8F6DD",
          "color": "#69C022",
          "display": "flex",
        }
      }
    >
      Anarock Tag
       
      <i
        className="icon-close"
        onClick={[Function]}
        style={
          Object {
            "borderLeft": "1px solid #E0E0E0",
          }
        }
      >
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </i>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typeahead simple 1`] = `
.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
  height: 68px;
}

.emotion-3.__pebble__input__wrapper__textarea {
  height: 110px;
}

.emotion-1 {
  outline: 0;
  border: 0;
  border-bottom: 1px solid #EDEDED;
  padding: 24px 0 12px 0;
  height: 48px;
  font-weight: normal;
  color: #101721;
  font-size: 14px;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1.__pebble__input__read__only {
  color: #6B7785;
}

.emotion-1.__pebble__input__disabled {
  cursor: inherit;
  pointer-events: none;
  color: #9FA6B0;
}

.emotion-1.__pebble__input__textarea {
  height: 88px;
  padding: 24px 0 52px 0;
  resize: none;
}

.emotion-1[type='date']::-webkit-inner-spin-button,
.emotion-1[type='date']::-webkit-calendar-picker-indicator {
  webkit-appearance: none;
  display: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1:-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1::-webkit-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::-moz-placeholder {
  color: #E0E0E0;
}

.emotion-1:-ms-input-placeholder {
  color: #E0E0E0;
}

.emotion-1::placeholder {
  color: #E0E0E0;
}

.emotion-2 {
  height: 2px;
  background-color: #6161FF;
  margin-top: -2px;
  position: relative;
  width: 0;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  z-index: 9;
}

.emotion-2.__pebble__input__highlight__state,
.emotion-2.__pebble__input__highlight__focused {
  width: 100%;
}

.emotion-0 {
  color: #9FA6B0;
  font-size: 14px;
  line-height: 12px;
  position: absolute;
  -webkit-transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  transition: all 0.3s cubic-bezier(.64,.09,.08,1);
  -webkit-transform: translate(0,24px);
  -ms-transform: translate(0,24px);
  transform: translate(0,24px);
  pointer-events: none;
}

.emotion-0.__pebble__input__label__focused {
  font-size: 12px;
  line-height: 10px;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  color: #6B7785;
}

.emotion-4 {
  position: relative;
  width: 400px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="emotion-0"
        >
          H
        </label>
        <input
          aria-label="H"
          className="emotion-1"
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          value=""
        />
        <div
          className="emotion-2"
          style={
            Object {
              "backgroundColor": "#6161FF",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
